--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -172,18 +172,11 @@
       <item quantity="one">Üksuse kustutamine …</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ei saa meediafaile töödelda"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Meedia töötlemine tühistati"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"Viga meedia töötlemisel"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"Meedia töötlemine õnnestus"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"Alustati meedia töötlemist"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"Meedia töötlemine …"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"Tühista"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"Oota"</string>
 </resources>
