--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -240,18 +240,11 @@
       <item quantity="one">מתבצעת מחיקה של פריט אחד…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"האפליקציה <xliff:g id="APP_NAME">%s</xliff:g> לא יכולה לעבד קובצי מדיה"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"עיבוד המדיה בוטל"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"שגיאה בעיבוד המדיה"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"עיבוד המדיה הסתיים בהצלחה"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"עיבוד המדיה החל"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"המדיה בעיבוד…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"ביטול"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"המתנה"</string>
 </resources>
