--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -172,18 +172,11 @@
       <item quantity="one">アイテムを削除しています…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>はメディア ファイルを処理できません"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"メディアの処理をキャンセルしました"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"メディア処理エラー"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"メディアの処理が終わりました"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"メディアの処理を開始しました"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"メディアを処理しています…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"キャンセル"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"待機"</string>
 </resources>
