--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -172,18 +172,11 @@
       <item quantity="one">항목 삭제 중…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>에서 미디어 파일을 처리할 수 없습니다"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"미디어 처리 취소됨"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"미디어 처리 오류"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"미디어 처리 성공"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"미디어 처리 시작됨"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"미디어 처리 중…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"취소"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"대기"</string>
 </resources>
