--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -206,18 +206,11 @@
       <item quantity="one">Se șterge elementul…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> nu poate procesa fișiere media"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Procesarea conținutului media a fost anulată"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"Eroare la procesarea conținutului media"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"Procesarea conținutului media s-a finalizat"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"Procesarea conținutului media a început"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"Se procesează conținutul media…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"Anulați"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"Așteptați"</string>
 </resources>
