--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -172,18 +172,11 @@
       <item quantity="one">Inafuta kipengee…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> imeshindwa kuchakata faili za maudhui"</string>
-    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
-    <skip />
-    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
-    <skip />
-    <!-- no translation found for transcode_processing_success (447288876429730122) -->
-    <skip />
-    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
-    <skip />
-    <!-- no translation found for transcode_processing (6753136468864077258) -->
-    <skip />
-    <!-- no translation found for transcode_cancel (8555752601907598192) -->
-    <skip />
-    <!-- no translation found for transcode_wait (8909773149560697501) -->
-    <skip />
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Mchakato wa maudhui umeghairiwa"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"Hitilafu ya kuchakata maudhui"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"Imemaliza kuchakata maudhui"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"Imeanza kuchakata maudhui"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"Inachakata maudhui…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"Ghairi"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"Subiri"</string>
 </resources>
