--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -307,4 +307,12 @@
       <item quantity="other">جارٍ حذف <xliff:g id="COUNT">^1</xliff:g> عنصر…</item>
       <item quantity="one">جارٍ حذف عنصر واحد…</item>
     </plurals>
+    <string name="transcode_denied" msgid="6760546817138288976">"يتعذّر على التطبيق <xliff:g id="APP_NAME">%s</xliff:g> معالجة ملفات الوسائط."</string>
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"تم إلغاء معالجة الوسائط."</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"حدث خطأ أثناء معالجة الوسائط."</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"تمت عملية معالجة الوسائط."</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"بدأت عملية معالجة الوسائط."</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"جارٍ معالجة الوسائط…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"إلغاء"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"الانتظار"</string>
 </resources>
