--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -171,4 +171,12 @@
       <item quantity="other">Menghapus <xliff:g id="COUNT">^1</xliff:g> item …</item>
       <item quantity="one">Menghapus item …</item>
     </plurals>
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> tidak dapat memproses file media"</string>
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Pemrosesan media dibatalkan"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"Pemrosesan media mengalami error"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"Pemrosesan media berhasil"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"Pemrosesan media dimulai"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"Memproses media…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"Batal"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"Tunggu"</string>
 </resources>
