--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -27,7 +27,7 @@
     <string name="root_documents" msgid="3829103301363849237">"Документтер"</string>
     <string name="permission_required" msgid="1460820436132943754">"Бул нерсени түзөтүү же жок кылуу үчүн уруксат талап кылынат."</string>
     <string name="permission_required_action" msgid="706370952366113539">"Улантуу"</string>
-    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"Уруксат берүү"</string>
+    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"Ооба"</string>
     <string name="grant_dialog_button_deny" msgid="6190589471415815741">"Тыюу салынат"</string>
     <plurals name="permission_more_thumb" formatted="false" msgid="4392079224649478923">
       <item quantity="other">дагы <xliff:g id="COUNT_1">^1</xliff:g></item>
@@ -41,8 +41,8 @@
     <string name="cache_clearing_dialog_text" msgid="7057784635111940957">"<xliff:g id="APP_SEEKING_PERMISSION">%s</xliff:g> айрым убактылуу файлдарды өчүргөнү жатат. Батарея же мобилдик Интернет өтө көп колдонулушу мүмкүн."</string>
     <string name="cache_clearing_in_progress_title" msgid="6902220064511664209">"Колдонмодогу убактылуу файлдар өчүрүлүүдө…"</string>
     <string name="clear" msgid="5524638938415865915">"Тазалоо"</string>
-    <string name="allow" msgid="8885707816848569619">"Уруксат берүү"</string>
-    <string name="deny" msgid="6040983710442068936">"Тыюу салуу"</string>
+    <string name="allow" msgid="8885707816848569619">"Ооба"</string>
+    <string name="deny" msgid="6040983710442068936">"Жок"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> колдонмосу <xliff:g id="COUNT">^2</xliff:g> аудио файлды өзгөртсүнбү?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> колдонмосу бул аудио файлды өзгөртсүнбү?</item>
@@ -92,8 +92,8 @@
       <item quantity="one">Видео таштандыга ыргытылууда…</item>
     </plurals>
     <plurals name="permission_trash_image" formatted="false" msgid="6400475304599873227">
-      <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> колдонмосу <xliff:g id="COUNT">^2</xliff:g> сүрөттү таштандыга салсынбы?</item>
-      <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> колдонмосу бул сүрөттү таштандыга салсынбы?</item>
+      <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> <xliff:g id="COUNT">^2</xliff:g> сүрөттү таштандыга салсынбы?</item>
+      <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> бул сүрөттү таштандыга салсынбы?</item>
     </plurals>
     <plurals name="permission_progress_trash_image" formatted="false" msgid="4529586663770971476">
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> сүрөт таштандыга ыргытылууда…</item>
@@ -171,4 +171,12 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> элемент жок кылынууда…</item>
       <item quantity="one">Элемент жок кылынууда…</item>
     </plurals>
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> медиа файлдарды иштете албайт"</string>
+    <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Медианы иштетүү жокко чыгарылды"</string>
+    <string name="transcode_processing_error" msgid="8921643164508407874">"Медианы иштетүү катасы"</string>
+    <string name="transcode_processing_success" msgid="447288876429730122">"Медиа ийгиликтүү иштетилди"</string>
+    <string name="transcode_processing_started" msgid="7789086308155361523">"Медиа иштетилип баштады"</string>
+    <string name="transcode_processing" msgid="6753136468864077258">"Медиа иштетилүүдө…"</string>
+    <string name="transcode_cancel" msgid="8555752601907598192">"Жокко чыгаруу"</string>
+    <string name="transcode_wait" msgid="8909773149560697501">"Күтүү"</string>
 </resources>
