--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -45,6 +45,7 @@
     <string name="clear" msgid="5524638938415865915">"Ștergeți"</string>
     <string name="allow" msgid="8885707816848569619">"Permiteți"</string>
     <string name="deny" msgid="6040983710442068936">"Refuzați"</string>
+    <string name="add" msgid="2894574044585549298">"Adăugați"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="few">Permiteți ca <xliff:g id="APP_NAME_1">^1</xliff:g> să modifice <xliff:g id="COUNT">^2</xliff:g> fișiere audio?</item>
       <item quantity="other">Permiteți ca <xliff:g id="APP_NAME_1">^1</xliff:g> să modifice <xliff:g id="COUNT">^2</xliff:g> de fișiere audio?</item>
